fixes github embeds pushing chat bodies out of viewport

--- a/less/default.less
+++ b/less/default.less
@@ -1,5 +1,7 @@
 .github-embeds-container {
 	margin-top: 1rem;
+	margin-left: 0px;
+        margin-right: 0px;
 }
 
 .github-embed {
@@ -42,6 +44,8 @@
 		background: none;
 		border: 0px;
 		margin-top: 1rem;
+		white-space: break-spaces;
+    		word-break: break-word;
 	}
 
 	.meta {
